--- a/index.html
+++ b/index.html
@@ -42,5 +42,23 @@
          </div>
         </div>
     </header>
+    <main>
+        <section>
+            <div>
+                <h1>ROSTED COFFEE FOR YOU</h1>
+                <p>The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
+                <button>TESTY COFFEE</button><button>READ MORE</button>
+                <ul>
+                    <li><img src="" alt="">FACEBOOK</li>
+                    <li><img src="" alt="">TWITTER</li>
+                    <li><img src="" alt="">YOUTUBE</li>
+                </ul>
+            </div>
+            <div>
+                <button></button>
+                <p>PLAY VIDEO</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
