--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
                 <p>PLAY VIDEO</p>
             </div>
         </section>
+        <section>
+            <div>
+                <img src="src/about-bg-3-1.jpeg" alt="">
+            </div>
+            <div>
+                <h3>Our History</h3>
+                <h2>CREATE A NEW STORY WITH US</h2>
+                <p>Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibhtincidunt.</p>
+                <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
