--- a/index.html
+++ b/index.html
@@ -60,7 +60,26 @@
                 <p>PLAY VIDEO</p>
             </div>
         </section>
-        // SECTION 2: Our Story
+        <!--Section 1-->
+        <section>
+            <ul>
+                <li>
+                    <p>01</p>
+                    <h3>BEST COFFEE FLAVOUR</h3>
+                    <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                </li>
+                <li>
+                    <p>02</p>
+                    <h3>PLACE TO GET LOST</h3>
+                    <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                </li>
+                <li>
+                    <p>03</p>
+                    <h3>PROPER ROESTING</h3>
+                    <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                </li>
+            </ul>
+        </section>
         <section>
             <div>
                 <img src="src/about-bg-3-1.jpeg" alt="">
