--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 </li>
             </ul>
         </section>
+        // SECTION 2: Our Story
         <section>
             <div>
                 <img src="src/about-bg-3-1.jpeg" alt="">
