Section 3 & section 2 changed

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
     </header>
     <main>
+        // SECTION 0 
         <section>
             <div>
                 <h1>ROSTED COFFEE FOR YOU</h1>
@@ -59,17 +60,31 @@
                 <p>PLAY VIDEO</p>
             </div>
         </section>
+        // SECTION 2: Our Story
         <section>
             <div>
                 <img src="src/about-bg-3-1.jpeg" alt="">
             </div>
             <div>
-                <h3>Our History</h3>
+                <p>Our History</p>
                 <h2>CREATE A NEW STORY WITH US</h2>
                 <p>Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibhtincidunt.</p>
                 <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
             </div>
         </section>
+       // Section 3: Menu 
+       <section>
+            <p>Menu</p>
+            <h2>CAFENA POPULAR MENU</h2>
+            <ul>
+                <li><img src="" alt=""><h3>AMERICANO ROSTED GRED <span>$12.00</span></h3></li>
+                <li><img src="" alt=""><h3>JAPANIS COFFEE GRED <span>$12.00</span></h3></li>
+                <li><img src="" alt=""><h3>VIRGIN COFFEE GRED <span>$12.00</span></h3></li>
+                <li><img src="" alt=""><h3>JAPANIS COFFEE GRED <span>$12.00</span></h3></li>
+                <li><img src="" alt=""><h3>CAFÈ AU LAIT Coffee <span>$12.00</span></h3></li>
+                <li><img src="" alt=""><h3>ESPRESSO RISTRETTO <span>$12.00</span></h3></li>
+            </ul>
+       </section>
     </main>
 </body>
 </html>
