--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
                 <li><img src="" alt=""><h3>ESPRESSO RISTRETTO <span>$12.00</span></h3></li>
             </ul>
        </section>
+       <!--Section 4-->
+       <section>
+          <div>
+              <h2>COFFEE MACHINE,BUY FOR HOME</h2>
+              <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
+              <p>mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis.</p>
+              <a href="#">DISCOVER NOW</a>
+              <img src="/src/cafetera.jpg" alt="imagen cafetera">
+              <button></button>
+              <button></button>
+          </div>
+       </section>
     </main>
 </body>
 </html>
