--- a/index.html
+++ b/index.html
@@ -232,6 +232,62 @@
               <button></button>
           </div>
        </section>
+       <section>
+        <p>Popular product</p>
+        <h2>CAFENA POPULAR PRODUCT</h2>
+        <a href="#">VIEW ALL PRODUCT</a>
+        <div>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <img src="/src/cafe1.jpg" alt="cafe1">
+            <form>
+                <p>COFFEE
+                <input type="radio" value="5"><label for="">★</label>
+                <input type="radio" value="4"><label for="">★</label>
+                <input type="radio" value="3"><label for="">★</label>
+                <input type="radio" value="2"><label for="">★</label>
+                <input type="radio" value="1"><label for="">★</label>
+                </p>
+            </form>
+            <h3>BRAZIL COFFEE GRED</h3>
+            <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
+        </div>
+        <div>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <img src="/src/cafe3.jpg" alt="cafe2">
+            <form>
+                <p>COFFEE
+                    <input type="radio" value="5"><label for="">★</label>
+                    <input type="radio" value="4"><label for="">★</label>
+                    <input type="radio" value="3"><label for="">★</label>
+                    <input type="radio" value="2"><label for="">★</label>
+                    <input type="radio" value="1"><label for="">★</label>
+                </p>
+            </form>
+            <h3>VICARAGUA COFFEE BEENS</h3>
+            <H4>PRICE <span>$325.00 /</span><span><del>$348</del></span></H4>
+        </div>
+        <div>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <img src="/src/cafe3.jpg" alt="cafe3">
+            <form>
+                <p>COFFEE
+                    <input type="radio" value="5"><label for="">★</label>
+                    <input type="radio" value="4"><label for="">★</label>
+                    <input type="radio" value="3"><label for="">★</label>
+                    <input type="radio" value="2"><label for="">★</label>
+                    <input type="radio" value="1"><label for="">★</label>
+                </p>
+            </form>
+            <h3>AMERICANO COFFEE</h3>
+            <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
+        </div>
+       </section>
     </main>
 </body>
 </html>
