--- a/index.html
+++ b/index.html
@@ -176,6 +176,27 @@
             <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
         </div>
        </section>
+       <section>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4577.374322430967!2d-58.390424852436304!3d-34.60994789334987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1666841340054!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div>
+            <p>RESERVATION</p>
+            <h2>BOOKING A TABLE</h2>
+            <Form>
+                <div>
+                    <input type="text"><span></span>
+                </div>
+                <div>
+                    <input type="text"><span></span>
+                </div>
+                <div>
+                    <input type="text"><span></span>
+                </div>
+            </Form>
+            <a href="#">BOOK A TABLE</a>
+        </div>
+       </section>
     </main>
 </body>
 </html>
