--- a/index.html
+++ b/index.html
@@ -197,6 +197,27 @@
             <a href="#">BOOK A TABLE</a>
         </div>
        </section>
+       <section>
+        <p>FROM OUR BLOG</p>
+        <h2>OUR NEWS & ARTICLES</h2>
+        <img src="/src/tazacafe1.jpg" alt="tazacafe1">
+        <img src="/src/tazacafe2.jpg" alt="tazacafe2">
+        <img src="/src/tazacafe3.jpg" alt="tazacafe3">
+        <div><p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+            <a href="#">Ideal Cocktails From Our Barmen For Pefect Mood</a>
+            <a href="#">READ MORE</a>
+         </div>
+        <div>
+            <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+            <a href="#">Build A Cool Mornig With Cafena Coffee</a>
+            <a href="#">READ MORE</a>
+        </div>
+        <div>
+            <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+            <a href="#">Questions Business Must Be Able To Answers</a>
+            <a href="#">READ MORE</a>
+        </div>
+       </section>
     </main>
 </body>
 </html>
