--- a/index.html
+++ b/index.html
@@ -199,9 +199,11 @@
        <section>
         <p>FROM OUR BLOG</p>
         <h2>OUR NEWS & ARTICLES</h2>
-        <img src="/src/tazacafe1.jpg" alt="tazacafe1">
-        <img src="/src/tazacafe2.jpg" alt="tazacafe2">
-        <img src="/src/tazacafe3.jpg" alt="tazacafe3">
+        <ul>
+        <li><img src="/src/tazacafe1.jpg" alt="tazacafe1"></li>
+        <li><img src="/src/tazacafe2.jpg" alt="tazacafe2"></li>
+        <li><img src="/src/tazacafe3.jpg" alt="tazacafe3"></li>
+        </ul>
         <div><p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
             <a href="#">Ideal Cocktails From Our Barmen For Pefect Mood</a>
             <a href="#">READ MORE</a>
