--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
                 <li><img src="" alt=""><h3>ESPRESSO RISTRETTO <span>$12.00</span></h3></li>
             </ul>
        </section>
+
+       // Section 6: Customer feedback 
+       <section>
+            <div>
+                <p>CUSTOMER FEEDBACK</p>
+                <h2>OUR CUSTOMER REVIEW</h2>    
+            </div>
+            
+            <div>
+                <img src="src/t-quote.png" alt="">
+
+            </div>
+       </section>
     </main>
 </body>
 </html>
