--- a/index.html
+++ b/index.html
@@ -107,19 +107,6 @@
                 <li><img src="" alt=""><h3>ESPRESSO RISTRETTO <span>$12.00</span></h3></li>
             </ul>
        </section>
-
-       // Section 6: Customer feedback 
-       <section>
-            <div>
-                <p>CUSTOMER FEEDBACK</p>
-                <h2>OUR CUSTOMER REVIEW</h2>    
-            </div>
-            
-            <div>
-                <img src="src/t-quote.png" alt="">
-
-            </div>
-       </section>
        <section>
         <p>Popular product</p>
         <h2>CAFENA POPULAR PRODUCT</h2>
@@ -354,8 +341,34 @@
             </div>
             
             <div>
-                <img src="src/t-quote.png" alt="">
+                <ol>
+                    <li>
+                        <img src="src/t-quote.png" alt="">
+                        <q>Very good quality of food and service. Vast menu with child friendly items as well as local seafood and even entrees for those who dont like seafood. Great place! Thanks. We absolutely love everything there!</q>
+                        <img src="src/cust01.jpg" alt="">
+                        <h4>John Doe</h4>
+                        <h5>Founder & CEO</h5>
 
+                    </li>
+                    <li>
+                        <img src="src/t-quote.png" alt="">
+                        <q>Very good quality of food and service. Vast menu with child friendly items as well as local seafood and even entrees for those who dont like seafood. Great place! Thanks. We absolutely love everything there!</q>
+                        <img src="src/cust02.jpg" alt="">
+                        <h4>Chinimi Sha</h4>
+                        <h5>Customer</h5>
+
+                    </li>
+                    <li>
+                        <img src="src/t-quote.png" alt="">
+                        <q>Very good quality of food and service. Vast menu with child friendly items as well as local seafood and even entrees for those who dont like seafood. Great place! Thanks. We absolutely love everything there!</q>
+                        <img src="src/cust03.jpg" alt="">
+                        <h4>Susan Octavio</h4>
+                        <h5>Customer</h5>
+
+                    </li>
+                </ol>
+                <a href=""><img src="src/left-arrow.png" alt=""></a>
+                <a href=""><img src="src/right-arrow.png" alt=""></a>
             </div>
        </section>
     </main>
