--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
         </div>
        </section>
+       //Section 7
        <section>
         <div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4577.374322430967!2d-58.390424852436304!3d-34.60994789334987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1666841340054!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -184,6 +185,7 @@
             <a href="#">BOOK A TABLE</a>
         </div>
        </section>
+       //Section 8
        <section>
         <p>FROM OUR BLOG</p>
         <h2>OUR NEWS & ARTICLES</h2>
