--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Web Shop</title>
 </head>
 <body>
+    //HEADER
     <header>
         <div>
          <div>
@@ -61,7 +62,7 @@
                 <p>PLAY VIDEO</p>
             </div>
         </section>
-        <!--Section 1-->
+        // SECTION 1
         <section>
             <ul>
                 <li>
@@ -81,8 +82,7 @@
                 </li>
             </ul>
         </section>
-        // SECTION 2: Our Story
-
+        //SECTION 2: Our Story
         <section>
             <div>
                 <img src="src/about-bg-3-1.jpeg" alt="">
@@ -94,7 +94,7 @@
                 <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
             </div>
         </section>
-       // Section 3: Menu 
+       //SECTION 3: Menu 
        <section>
             <p>Menu</p>
             <h2>CAFENA POPULAR MENU</h2>
@@ -107,6 +107,19 @@
                 <li><img src="" alt=""><h3>ESPRESSO RISTRETTO <span>$12.00</span></h3></li>
             </ul>
        </section>
+       //SECTION 4
+       <section>
+        <div>
+            <h2>COFFEE MACHINE,BUY FOR HOME</h2>
+            <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
+            <p>mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis.</p>
+            <a href="#">DISCOVER NOW</a>
+            <img src="/src/cafetera.jpg" alt="imagen cafetera">
+            <button></button>
+            <button></button>
+        </div>
+     </section>
+       //SECTION 5
        <section>
         <p>Popular product</p>
         <h2>CAFENA POPULAR PRODUCT</h2>
@@ -163,179 +176,7 @@
             <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
         </div>
        </section>
-       //Section 7
-       <section>
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4577.374322430967!2d-58.390424852436304!3d-34.60994789334987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1666841340054!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div>
-            <p>RESERVATION</p>
-            <h2>BOOKING A TABLE</h2>
-            <Form>
-                <div>
-                    <input type="text"><span></span>
-                </div>
-                <div>
-                    <input type="text"><span></span>
-                </div>
-                <div>
-                    <input type="text"><span></span>
-                </div>
-            </Form>
-            <a href="#">BOOK A TABLE</a>
-        </div>
-       </section>
-       //Section 8
-       <section>
-        <p>FROM OUR BLOG</p>
-        <h2>OUR NEWS & ARTICLES</h2>
-        <ul>
-        <li><img src="/src/tazacafe1.jpg" alt="tazacafe1"></li>
-        <li><img src="/src/tazacafe2.jpg" alt="tazacafe2"></li>
-        <li><img src="/src/tazacafe3.jpg" alt="tazacafe3"></li>
-        </ul>
-        <div><p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
-            <a href="#">Ideal Cocktails From Our Barmen For Pefect Mood</a>
-            <a href="#">READ MORE</a>
-         </div>
-        <div>
-            <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
-            <a href="#">Build A Cool Mornig With Cafena Coffee</a>
-            <a href="#">READ MORE</a>
-        </div>
-        <div>
-            <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
-            <a href="#">Questions Business Must Be Able To Answers</a>
-            <a href="#">READ MORE</a>
-        </div>
-       </section>
-       <!--Section 4-->
-       <section>
-          <div>
-              <h2>COFFEE MACHINE,BUY FOR HOME</h2>
-              <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
-              <p>mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis.</p>
-              <a href="#">DISCOVER NOW</a>
-              <img src="/src/cafetera.jpg" alt="imagen cafetera">
-              <button></button>
-              <button></button>
-          </div>
-       </section>
-       <section>
-        <p>Popular product</p>
-        <h2>CAFENA POPULAR PRODUCT</h2>
-        <a href="#">VIEW ALL PRODUCT</a>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe1.jpg" alt="cafe1">
-            <form>
-                <p>COFFEE
-                <input type="radio" value="5"><label for="">★</label>
-                <input type="radio" value="4"><label for="">★</label>
-                <input type="radio" value="3"><label for="">★</label>
-                <input type="radio" value="2"><label for="">★</label>
-                <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>BRAZIL COFFEE GRED</h3>
-            <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
-        </div>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe3.jpg" alt="cafe2">
-            <form>
-                <p>COFFEE
-                    <input type="radio" value="5"><label for="">★</label>
-                    <input type="radio" value="4"><label for="">★</label>
-                    <input type="radio" value="3"><label for="">★</label>
-                    <input type="radio" value="2"><label for="">★</label>
-                    <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>VICARAGUA COFFEE BEENS</h3>
-            <H4>PRICE <span>$325.00 /</span><span><del>$348</del></span></H4>
-        </div>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe3.jpg" alt="cafe3">
-            <form>
-                <p>COFFEE
-                    <input type="radio" value="5"><label for="">★</label>
-                    <input type="radio" value="4"><label for="">★</label>
-                    <input type="radio" value="3"><label for="">★</label>
-                    <input type="radio" value="2"><label for="">★</label>
-                    <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>AMERICANO COFFEE</h3>
-            <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
-        </div>
-       </section>
-
-       <section>
-        <p>Popular product</p>
-        <h2>CAFENA POPULAR PRODUCT</h2>
-        <a href="#">VIEW ALL PRODUCT</a>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe1.jpg" alt="cafe1">
-            <form>
-                <p>COFFEE
-                <input type="radio" value="5"><label for="">★</label>
-                <input type="radio" value="4"><label for="">★</label>
-                <input type="radio" value="3"><label for="">★</label>
-                <input type="radio" value="2"><label for="">★</label>
-                <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>BRAZIL COFFEE GRED</h3>
-            <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
-        </div>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe3.jpg" alt="cafe2">
-            <form>
-                <p>COFFEE
-                    <input type="radio" value="5"><label for="">★</label>
-                    <input type="radio" value="4"><label for="">★</label>
-                    <input type="radio" value="3"><label for="">★</label>
-                    <input type="radio" value="2"><label for="">★</label>
-                    <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>VICARAGUA COFFEE BEENS</h3>
-            <H4>PRICE <span>$325.00 /</span><span><del>$348</del></span></H4>
-        </div>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe3.jpg" alt="cafe3">
-            <form>
-                <p>COFFEE
-                    <input type="radio" value="5"><label for="">★</label>
-                    <input type="radio" value="4"><label for="">★</label>
-                    <input type="radio" value="3"><label for="">★</label>
-                    <input type="radio" value="2"><label for="">★</label>
-                    <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>AMERICANO COFFEE</h3>
-            <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
-        </div>
-       </section>
-
-       // Section 6: Customer feedback 
+       //SECTION 6: Customer feedback 
        <section>
             <div>
                 <p>CUSTOMER FEEDBACK</p>
@@ -373,6 +214,54 @@
                 <a href=""><img src="src/right-arrow.png" alt=""></a>
             </div>
        </section>
+       //SECTION 7
+       <section>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4577.374322430967!2d-58.390424852436304!3d-34.60994789334987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1666841340054!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div>
+            <p>RESERVATION</p>
+            <h2>BOOKING A TABLE</h2>
+            <Form>
+                <div>
+                    <input type="text"><span></span>
+                </div>
+                <div>
+                    <input type="text"><span></span>
+                </div>
+                <div>
+                    <input type="text"><span></span>
+                </div>
+            </Form>
+            <a href="#">BOOK A TABLE</a>
+        </div>
+       </section>
+       //SECTION 8
+       <section>
+        <p>FROM OUR BLOG</p>
+        <h2>OUR NEWS & ARTICLES</h2>
+        <ul>
+        <li><img src="/src/tazacafe1.jpg" alt="tazacafe1"></li>
+        <li><img src="/src/tazacafe2.jpg" alt="tazacafe2"></li>
+        <li><img src="/src/tazacafe3.jpg" alt="tazacafe3"></li>
+        </ul>
+        <div><p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+            <a href="#">Ideal Cocktails From Our Barmen For Pefect Mood</a>
+            <a href="#">READ MORE</a>
+         </div>
+        <div>
+            <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+            <a href="#">Build A Cool Mornig With Cafena Coffee</a>
+            <a href="#">READ MORE</a>
+        </div>
+        <div>
+            <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+            <a href="#">Questions Business Must Be Able To Answers</a>
+            <a href="#">READ MORE</a>
+        </div>
+       </section>
+       
+       
     </main>
 </body>
 </html>
