--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Web Shop</title>
 </head>
 <body>
-    //HEADER
+    <!--Header-->
     <header>
         <div>
          <div>
@@ -45,16 +45,16 @@
     </header>
     
     <main>
-        // SECTION 0 
+        <!--SECTION 0-->  
         <section>
             <div>
                 <h1>ROSTED COFFEE FOR YOU</h1>
                 <p>The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
                 <button>TESTY COFFEE</button><button>READ MORE</button>
                 <ul>
-                    <li><img src="" alt="">FACEBOOK</li>
-                    <li><img src="" alt="">TWITTER</li>
-                    <li><img src="" alt="">YOUTUBE</li>
+                    <li><img src="src/facebook.png" alt="">FACEBOOK</li>
+                    <li><img src="src/twitter.png" alt="">TWITTER</li>
+                    <li><img src="src/youtube.png" alt="">YOUTUBE</li>
                 </ul>
             </div>
             <div>
@@ -62,7 +62,7 @@
                 <p>PLAY VIDEO</p>
             </div>
         </section>
-        // SECTION 1
+        <!--SECTION 1-->
         <section>
             <ul>
                 <li>
@@ -82,7 +82,7 @@
                 </li>
             </ul>
         </section>
-        //SECTION 2: Our Story
+        <!--SECTION 2-->
         <section>
             <div>
                 <img src="src/about-bg-3-1.jpeg" alt="">
@@ -94,8 +94,8 @@
                 <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
             </div>
         </section>
-       //SECTION 3: Menu 
-       <section>
+        <!--SECTION 3--> 
+        <section>
             <p>Menu</p>
             <h2>CAFENA POPULAR MENU</h2>
             <ul>
@@ -106,78 +106,78 @@
                 <li><img src="" alt=""><h3>CAFÈ AU LAIT Coffee <span>$12.00</span></h3></li>
                 <li><img src="" alt=""><h3>ESPRESSO RISTRETTO <span>$12.00</span></h3></li>
             </ul>
-       </section>
-       //SECTION 4
-       <section>
-        <div>
-            <h2>COFFEE MACHINE,BUY FOR HOME</h2>
-            <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
-            <p>mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis.</p>
-            <a href="#">DISCOVER NOW</a>
-            <img src="/src/cafetera.jpg" alt="imagen cafetera">
-            <button></button>
-            <button></button>
-        </div>
-     </section>
-       //SECTION 5
-       <section>
-        <p>Popular product</p>
-        <h2>CAFENA POPULAR PRODUCT</h2>
-        <a href="#">VIEW ALL PRODUCT</a>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe1.jpg" alt="cafe1">
-            <form>
-                <p>COFFEE
-                <input type="radio" value="5"><label for="">★</label>
-                <input type="radio" value="4"><label for="">★</label>
-                <input type="radio" value="3"><label for="">★</label>
-                <input type="radio" value="2"><label for="">★</label>
-                <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>BRAZIL COFFEE GRED</h3>
-            <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
-        </div>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe3.jpg" alt="cafe2">
-            <form>
-                <p>COFFEE
+        </section>
+       <!--SECTION 4-->
+        <section>
+            <div>
+                <h2>COFFEE MACHINE,BUY FOR HOME</h2>
+                <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
+                <p>mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis.</p>
+                <a href="#">DISCOVER NOW</a>
+                <img src="/src/cafetera.jpg" alt="imagen cafetera">
+                <button></button>
+                <button></button>
+            </div>
+        </section>
+       <!--SECTION 5-->
+        <section>
+            <p>Popular product</p>
+            <h2>CAFENA POPULAR PRODUCT</h2>
+            <a href="#">VIEW ALL PRODUCT</a>
+            <div>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <img src="/src/cafe1.jpg" alt="cafe1">
+                <form>
+                    <p>COFFEE
                     <input type="radio" value="5"><label for="">★</label>
                     <input type="radio" value="4"><label for="">★</label>
                     <input type="radio" value="3"><label for="">★</label>
                     <input type="radio" value="2"><label for="">★</label>
                     <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>VICARAGUA COFFEE BEENS</h3>
-            <H4>PRICE <span>$325.00 /</span><span><del>$348</del></span></H4>
-        </div>
-        <div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <img src="/src/cafe3.jpg" alt="cafe3">
-            <form>
-                <p>COFFEE
-                    <input type="radio" value="5"><label for="">★</label>
-                    <input type="radio" value="4"><label for="">★</label>
-                    <input type="radio" value="3"><label for="">★</label>
-                    <input type="radio" value="2"><label for="">★</label>
-                    <input type="radio" value="1"><label for="">★</label>
-                </p>
-            </form>
-            <h3>AMERICANO COFFEE</h3>
-            <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
-        </div>
-       </section>
-       //SECTION 6: Customer feedback 
-       <section>
+                    </p>
+                </form>
+                <h3>BRAZIL COFFEE GRED</h3>
+                <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
+            </div>
+            <div>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <img src="/src/cafe3.jpg" alt="cafe2">
+                <form>
+                    <p>COFFEE
+                        <input type="radio" value="5"><label for="">★</label>
+                        <input type="radio" value="4"><label for="">★</label>
+                        <input type="radio" value="3"><label for="">★</label>
+                        <input type="radio" value="2"><label for="">★</label>
+                        <input type="radio" value="1"><label for="">★</label>
+                    </p>
+                </form>
+                <h3>VICARAGUA COFFEE BEENS</h3>
+                <H4>PRICE <span>$325.00 /</span><span><del>$348</del></span></H4>
+            </div>
+            <div>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <img src="/src/cafe3.jpg" alt="cafe3">
+                <form>
+                    <p>COFFEE
+                        <input type="radio" value="5"><label for="">★</label>
+                        <input type="radio" value="4"><label for="">★</label>
+                        <input type="radio" value="3"><label for="">★</label>
+                        <input type="radio" value="2"><label for="">★</label>
+                        <input type="radio" value="1"><label for="">★</label>
+                    </p>
+                </form>
+                <h3>AMERICANO COFFEE</h3>
+                <h4>PRICE <span>$325.00 /</span><span><del>$348</del></span></h4>
+            </div>
+        </section>
+       <!--SECTION 6--> 
+        <section>
             <div>
                 <p>CUSTOMER FEEDBACK</p>
                 <h2>OUR CUSTOMER REVIEW</h2>    
@@ -213,54 +213,88 @@
                 <a href=""><img src="src/left-arrow.png" alt=""></a>
                 <a href=""><img src="src/right-arrow.png" alt=""></a>
             </div>
-       </section>
-       //SECTION 7
+        </section>
+       <!--SECTION 7-->
 
-       <section>
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4577.374322430967!2d-58.390424852436304!3d-34.60994789334987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1666841340054!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div>
-            <p>RESERVATION</p>
-            <h2>BOOKING A TABLE</h2>
-            <Form>
-                <div>
-                    <input type="text"><span></span>
-                </div>
-                <div>
-                    <input type="text"><span></span>
-                </div>
-                <div>
-                    <input type="text"><span></span>
-                </div>
-            </Form>
-            <a href="#">BOOK A TABLE</a>
-        </div>
-       </section>
-       //SECTION 8
-       <section>
-        <p>FROM OUR BLOG</p>
-        <h2>OUR NEWS & ARTICLES</h2>
-        <ul>
-        <li><img src="/src/tazacafe1.jpg" alt="tazacafe1"></li>
-        <li><img src="/src/tazacafe2.jpg" alt="tazacafe2"></li>
-        <li><img src="/src/tazacafe3.jpg" alt="tazacafe3"></li>
-        </ul>
-        <div><p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
-            <a href="#">Ideal Cocktails From Our Barmen For Pefect Mood</a>
-            <a href="#">READ MORE</a>
-         </div>
-        <div>
-            <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
-            <a href="#">Build A Cool Mornig With Cafena Coffee</a>
-            <a href="#">READ MORE</a>
-        </div>
-        <div>
-            <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
-            <a href="#">Questions Business Must Be Able To Answers</a>
-            <a href="#">READ MORE</a>
-        </div>
-       </section>
+        <section>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4577.374322430967!2d-58.390424852436304!3d-34.60994789334987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1666841340054!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div>
+                <p>RESERVATION</p>
+                <h2>BOOKING A TABLE</h2>
+                <Form>
+                    <div>
+                        <input type="text"><span></span>
+                    </div>
+                    <div>
+                        <input type="text"><span></span>
+                    </div>
+                    <div>
+                        <input type="text"><span></span>
+                    </div>
+                </Form>
+                <a href="#">BOOK A TABLE</a>
+            </div>
+        </section>
+       <!--SECTION 8-->
+        <section>
+            <p>FROM OUR BLOG</p>
+            <h2>OUR NEWS & ARTICLES</h2>
+            <ul>
+            <li><img src="/src/tazacafe1.jpg" alt="tazacafe1"></li>
+            <li><img src="/src/tazacafe2.jpg" alt="tazacafe2"></li>
+            <li><img src="/src/tazacafe3.jpg" alt="tazacafe3"></li>
+            </ul>
+            <div><p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+                <a href="#">Ideal Cocktails From Our Barmen For Pefect Mood</a>
+                <a href="#">READ MORE</a>
+            </div>
+            <div>
+                <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+                <a href="#">Build A Cool Mornig With Cafena Coffee</a>
+                <a href="#">READ MORE</a>
+            </div>
+            <div>
+                <p><b>BY:</b>RASALINA \ LIFE \ 23.01.2017</p>
+                <a href="#">Questions Business Must Be Able To Answers</a>
+                <a href="#">READ MORE</a>
+            </div>
+        </section>
     </main>
+    <!--FOOTER-->
+    <footer>
+        <div>
+            <ul>
+                <li>
+                    <img src="" alt="">
+                    <h4>PHONE: <a href="tel:88019339702520">+88019 339 702 520</a></h4>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <!--Agregar ID del mapa en href-->
+                    <h4>ADRESS: <a href="">30 North West New</a></h4>
+                </li>
+                <li>
+                    <form action="index.html">
+                        <input type="email" name="email" id="email" placeholder="Enter your email">
+                        <button type="submit">Suscribe <img src="src/paper-plane.png" alt=""></button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <div><img src="src/logo.png" alt=""><p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum</p></div>
+            <div>
+                <ul>
+                    <li><a href=""><img src="src/twitter.png" alt=""></a></li>
+                    <li><a href=""><img src="src/facebook.png" alt=""></a></li>
+                    <li><a href=""><img src="src/youtube.png" alt=""></a></li>
+                    <li><a href=""><img src="src/google-plus.png" alt=""></a></li>
+                    <li><a href=""><img src="src/instagram.png" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
