--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
     
     <main>
         <!--SECTION 0-->  
-        <section>
-            <div>
-                <h1>ROSTED COFFEE FOR YOU</h1>
-                <p>The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
-                <button>TESTY COFFEE</button><button>READ MORE</button>
-                <ul>
-                    <li><img src="src/icons/facebook.png" alt="">FACEBOOK</li>
-                    <li><img src="src/icons/twitter.png" alt="">TWITTER</li>
-                    <li><img src="src/icons/youtube.png" alt="">YOUTUBE</li>
+        <section class="Hero">
+            <div class="Hero__container">
+                <h1 class="Hero__container--tittle">ROSTED COFFEE FOR YOU</h1>
+                <p class="Hero__container-p">The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
+                <button class="Hero__container--button">TESTY COFFEE</button><button class="Hero__container-button-read">READ MORE</button>
+                <ul class="Hero__container--list">
+                    <li class="Hero__container--list-socialmedia"><img src="src/icons/facebook.png" alt="Icon facebook">FACEBOOK</li>
+                    <li class="Hero__container--list-socialmedia"><img src="src/icons/twitter.png" alt="Icon twitter">TWITTER</li>
+                    <li class="Hero__container--list-socialmedia"><img src="src/icons/youtube.png" alt="Icon youtube">YOUTUBE</li>
                 </ul>
             </div>
-            <div>
-                <button><img src="src/icons/play.png" alt=""></button>
-                <p>PLAY VIDEO</p>
+            <div class="Hero__video-container">
+                <button class="Hero__video-container--button"><img src="src/icons/play.png" alt="Icon start"></button>
+                <p class="Hero__video-container--p">PLAY VIDEO</p>
             </div>
         </section>
         <!--SECTION 1-->
