--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/desktop/section0.css">
 </head>
 <body>
     <!--Header-->
@@ -45,7 +46,7 @@
         <!--SECTION 0-->  
         <section class="Hero">
             <div class="Hero__container">
-                <h1 class="Hero__container--tittle">ROSTED COFFEE FOR YOU</h1>
+                <h1 class="Hero__container--tittle">ROSTED COFFEE <br>FOR YOU</br></h1>
                 <p class="Hero__container-p">The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
                 <button class="Hero__container--button">TESTY COFFEE</button><button class="Hero__container-button-read">READ MORE</button>
                 <ul class="Hero__container--list">
