--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Shop</title>
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="/css/desktop/section0.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
@@ -49,17 +50,23 @@
         <section class="Hero">
             <div class="Hero__container">
                 <h1 class="Hero__container--tittle">ROSTED COFFEE <br>FOR YOU</br></h1>
-                <p class="Hero__container-p">The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
-                <button class="Hero__container--button">TESTY COFFEE</button><button class="Hero__container-button-read">READ MORE</button>
+                <p class="Hero__container--p">The coffee is brewed by first roasting the green coffee beans over hot <br>coals in a brazier. given an opportunity to sample.</br></p>
+                <button class="Hero__container--button">TESTY COFFEE</button><button class="Hero__container--button-read">READ MORE</button>
                 <ul class="Hero__container--list">
-                    <li class="Hero__container--list-socialmedia"><img src="src/icons/facebook.png" alt="Icon facebook">FACEBOOK</li>
-                    <li class="Hero__container--list-socialmedia"><img src="src/icons/twitter.png" alt="Icon twitter">TWITTER</li>
-                    <li class="Hero__container--list-socialmedia"><img src="src/icons/youtube.png" alt="Icon youtube">YOUTUBE</li>
+                    <li class="Hero__container--list-socialmedia">
+                        <a><img src="src/icons/facebook.png" alt="Icon facebook" class="Hero__container--list-img">FACEBOOK</a>
+                    </li>
+
+                    <li class="Hero__container--list-socialmedia">
+                        <a><img src="src/icons/twitter.png" alt="Icon twitter" class="Hero__container--list-img"> TWITTER</a>
+                    </li>
+                    <li class="Hero__container--list-socialmedia">
+                        <a><img src="src/icons/youtube.png" alt="Icon youtube" class="Hero__container--list-img"> YOUTUBE</a>
+                    </li>
+
                 </ul>
-            </div>
-            <div class="Hero__video-container">
-                <button class="Hero__video-container--button"><img src="src/icons/play.png" alt="Icon start"></button>
-                <p class="Hero__video-container--p">PLAY VIDEO</p>
+                <button class="Hero__video--container-button"><img src="src/icons/play.png" alt="Icon start" class="Hero__video--container-img"></button>
+                <p class="Hero__video--container-p">PLAY VIDEO</p>
             </div>
         </section>
         <!--SECTION 1-->
