--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                         <a><img src="src/icons/youtube.png" alt="Icon youtube" class="Hero__container--list-img"> YOUTUBE</a>
                     </li>
 
-                </ul>
-                <button class="Hero__video--container-button"><img src="src/icons/play.png" alt="Icon start" class="Hero__video--container-img"></button>
-                <p class="Hero__video--container-p">PLAY VIDEO</p>
-            </div>
+                </ul>               
+            </div>  
+            <div class="Hero__second-background">
+            </div> 
         </section>
         <!--SECTION 1-->
         <section class="features">
