--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/desktop/section2.css">
 </head>
 <body>
     <!--Header-->
@@ -98,15 +99,15 @@
             </div>
         </section>
         <!--SECTION 2-->
-        <section>
-            <div>
-                <img src="src/images/about-bg-3-1.jpeg" alt="">
+        <section class="history">
+            <div class="history__cafe">
+                <img src="src/images/about-bg-3-1.jpeg" alt="" class="history__cafe--img">
             </div>
-            <div>
-                <p>Our History</p>
-                <h2>CREATE A NEW STORY WITH US</h2>
-                <p>Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibhtincidunt.</p>
-                <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
+            <div class="history__container">
+                <p class="history__container--p">OUR HISTORY</p>
+                <h2 class="history__container--tittle">CREATE A NEW STORY WITH US</h2>
+                <p class="histoy__container--text">Mauris rhoncus orci in imperdiet placerat. Vestibulum  euismod nisl<br> suscipit ligula volutpat, a feugiat urna maximus. Cras massa</br> nibhtincidunt.</p>
+                <p class="histoy__container--text">Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam<br> quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis.</br> Aliquam erat volutpat.</p>
             </div>
         </section>
         <!--SECTION 3--> 
