--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/desktop/section2.css">
+    <link rel="stylesheet" href="/css/desktop/section3.css">
 </head>
 <body>
     <!--Header-->
@@ -111,17 +112,21 @@
             </div>
         </section>
         <!--SECTION 3--> 
-        <section>
-            <p>Menu</p>
-            <h2>CAFENA POPULAR MENU</h2>
-            <ul>
-                <li><img src="src/images/menu-2-1.png" alt=""><h3>AMERICANO ROSTED GRED <span>$12.00</span></h3></li>
-                <li><img src="src/images/menu-2-2.png" alt=""><h3>JAPANIS COFFEE GRED <span>$12.00</span></h3></li>
-                <li><img src="src/images/menu-2-3.png" alt=""><h3>VIRGIN COFFEE GRED <span>$12.00</span></h3></li>
-                <li><img src="src/images/menu-2-4.png" alt=""><h3>JAPANIS COFFEE GRED <span>$12.00</span></h3></li>
-                <li><img src="src/images/menu-2-5.png" alt=""><h3>CAFÈ AU LAIT Coffee <span>$12.00</span></h3></li>
-                <li><img src="src/images/menu-2-6.png" alt=""><h3>ESPRESSO RISTRETTO <span>$12.00</span></h3></li>
-            </ul>
+        <section class="popular-menu">
+            <div class="popular-menu__container">
+                 <p class="popular-menu__p">MENU</p>
+                 <h2 class="popular-menu__tittle">CAFENA POPULAR MENU</h2>
+            </div>
+            <div class="popular-menu__container-list">
+                 <ul class="popular-menu__list">
+                     <li class="popular-menu__list--item"><img src="src/images/menu-2-1.png" alt="" class="popular-menu__list--img"><h3 class="popular-menu__list--text">AMERICANO ROSTED GRED </h3><span class="popular-menu__list--text-space">$12.00</span></li>
+                     <li class="popular-menu__list--item"><img src="src/images/menu-2-2.png" alt="" class="popular-menu__list--img"><h3 class="popular-menu__list--text">JAPANIS COFFEE GRED </h3><span class="popular-menu__list--text-space">$12.00</span></li>
+                     <li class="popular-menu__list--item"><img src="src/images/menu-2-3.png" alt="" class="popular-menu__list--img"><h3 class="popular-menu__list--text">VIRGIN COFFEE GRED </h3><span class="popular-menu__list--text-space">$12.00</span></li>
+                     <li class="popular-menu__list--item"><img src="src/images/menu-2-4.png" alt="" class="popular-menu__list--img"><h3 class="popular-menu__list--text">JAPANIS COFFEE GRED </h3><span class="popular-menu__list--text-space">$12.00</span></li>
+                     <li class="popular-menu__list--item"><img src="src/images/menu-2-5.png" alt="" class="popular-menu__list--img"><h3 class="popular-menu__list--text">CAFÈ AU LAIT Coffee </h3><span class="popular-menu__list--text-space">$12.00</span></li>
+                     <li class="popular-menu__list--item"><img src="src/images/menu-2-6.png" alt="" class="popular-menu__list--img"><h3 class="popular-menu__list--text">ESPRESSO RISTRETTO </h3><span class="popular-menu__list--text-space">$12.00</span></li>
+                 </ul>
+            </div>
         </section>
        <!--SECTION 4-->
         <section>
