--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/desktop/section2.css">
     <link rel="stylesheet" href="/css/desktop/section3.css">
+    <link rel="stylesheet" href="/css/desktop/section4.css">
 </head>
 <body>
     <!--Header-->
@@ -129,17 +130,20 @@
             </div>
         </section>
        <!--SECTION 4-->
-        <section>
-            <div>
-                <h2>COFFEE MACHINE,BUY FOR HOME</h2>
-                <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
-                <p>mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis.</p>
-                <a href="#"><button>DISCOVER NOW</button></a>
-            </div>
-            <div>
-                <img src="/src/images/cafetera.jpg" alt="imagen cafetera">
-                <button><img src="src/icons/plus.png" alt=""></button>
-                <button><img src="src/icons/plus.png" alt=""></button>
+        <section class="discover">
+            <div class="discover__container">
+                 <div class="discover__container--info">
+                     <h2 class="discover__container--tittle">COFFEE MACHINE,BUY FOR HOME</h2>
+                     <p class="discover__container--text">Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.
+                     <br>
+                     mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis.</p>
+                     <a href="#"><button class="discover__container--button">DISCOVER NOW</button></a>
+                 </div>
+                 <div class="discover__kettle-img">
+                     <img src="/src/images/cafetera.jpg" alt="imagen cafetera" class="kettle__img">
+                     <button class="discover__kettle--button-up"><img src="src/icons/plus.png" alt="" class="discover__kettle--img-up"></button>
+                     <button class="discover__kettle--button-down"><img src="src/icons/plus.png" alt="" class="discover__kettle--img-down"></button>
+                 </div>
             </div>
         </section>
        <!--SECTION 5-->
