--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/desktop/section2.css">
-    <link rel="stylesheet" href="/css/desktop/section3.css">
-    <link rel="stylesheet" href="/css/desktop/section4.css">
+    <!--<link rel="stylesheet" href="/css/desktop/section3.css">-->
 </head>
 <body>
     <!--Header-->
